feat: check if user exists using clerk token and teams search for a event
